fixed overflow

--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body {
     font-family: Roboto, sans-serif;
     display: flex;
     flex-direction: column;
-    overflow: scroll;
 }
 
 .header {
